--- a/.github/workflows/javabuild.yaml
+++ b/.github/workflows/javabuild.yaml
@@ -13,7 +13,7 @@ on:
 
 jobs:
  Java_App:
-  runs-on: ubuntu_latest
+  runs-on: ubuntu-latest
   steps:
   - name: Checkout code
     uses: actions/checkout@v4
