--- a/.github/workflows/javabuild.yaml
+++ b/.github/workflows/javabuild.yaml
@@ -29,7 +29,7 @@ jobs:
     run: mvn clean install -DskipTests
 
   - name: build docker image
-    run: docker build -t demo-app${{github.sha}}
+    run: docker build -t demo-app:${{github.sha}}
      
   
  
