--- a/.github/workflows/javabuild.yaml
+++ b/.github/workflows/javabuild.yaml
@@ -54,11 +54,15 @@ jobs:
         if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.app == 'Java' }}
         run: mvn clean install -DskipTests
 
-      - name: build docker image
-        # Run docker build for both Java and node.js when triggered via workflow_dispatch,
-        # or always on push. Adjust as you want.
-        if: ${{ (github.event_name == 'workflow_dispatch' && (github.event.inputs.app == 'Java' || github.event.inputs.app == 'node.js')) || github.event_name == 'push' }}
-        run: docker build -t demo-app:${{ github.sha }} .
+      - name: Build Docker image (node)
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.app == 'node.js' }}
+        run: |
+         docker build --target runtime-node -t demo-app-node:${{ github.sha }} .
+
+      - name: Build Docker image (java)
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.app == 'Java' }}
+        run: |
+         docker build --target runtime-java -t demo-app-java:${{ github.sha }} .
 
       - name: upload an artifact
         if: ${{ github.event_name == 'workflow_dispatch' }}
