--- a/.github/workflows/javabuild.yaml
+++ b/.github/workflows/javabuild.yaml
@@ -19,13 +19,14 @@ on:
 
 jobs:
   Build:
+    if: ${{ github.ref_name == 'main' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: setup Java
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.app == 'Java' && github.ref_name == 'main' }}
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.app == 'Java' }}
         uses: actions/setup-java@v4
         with:
           java-version: '17'
@@ -33,13 +34,13 @@ jobs:
           cache: maven
 
       - name: setup node js
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.app == 'node.js' && github.ref_name == 'main'}}
+        if: ${{ github.event.inputs.app == 'node.js' }}
         uses: actions/setup-node@v4
         with:
           node-version: '18'
 
       - name: Install dependencies,Test,Build (node)
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.app == 'node.js' && github.ref_name == 'main' }}
+        if: ${{ github.event.inputs.app == 'node.js' }}
         run: | 
          ## Install dependencies
          npm install
@@ -50,21 +51,20 @@ jobs:
          ls- lrt
 
       - name: Build with Maven
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.app == 'Java' && github.ref_name == 'main' }}
+        if: ${{ github.event.inputs.app == 'Java' }}
         run: mvn clean install -DskipTests
 
       - name: Build Docker image (node)
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.app == 'node.js' && github.ref_name == 'main' }}
+        if: ${{ github.event.inputs.app == 'node.js' }}
         run: |
          docker build --target runtime-node -t demo-app-node:${{ github.sha }} .
 
       - name: Build Docker image (java)
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.app == 'Java' && github.ref_name == 'main' }}
+        if: ${{ github.event.inputs.app == 'Java' }}
         run: |
          docker build --target runtime-java -t demo-app-java:${{ github.sha }} .
 
       - name: upload an artifact
-        if: ${{ github.event_name == 'workflow_dispatch' }}
         uses: actions/upload-artifact@v4
         with:
           name: myapp
@@ -72,7 +72,6 @@ jobs:
           retention: 1
 
       - name: download an artifact
-        if: ${{ github.event_name == 'workflow_dispatch' }}
         uses: actions/download-artifact@v4
         with:
          name: myapp
